ajout livre Riolo

--- a/autres.html
+++ b/autres.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://www.amazon.fr/Blue-Microphones-SYktcjgs-Microphone-Carmin/dp/B07W7KHB9J/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=blue+yeti&qid=1593612365&sr=8-3" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/716wsV19mZL._AC_SL1500_.jpg" alt="Micro Blue Yeti" class="others" /></a>
@@ -43,7 +43,7 @@
       <figcaption>
         139,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 3
     <figure>
