--- a/livres.html
+++ b/livres.html
@@ -38,8 +38,8 @@
 
     <!--Livre 2-->
     <figure>
-      <a href="https://www.amazon.fr/Cher-football-fran%C3%A7ais-Daniel-Riolo/dp/2755683805/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=daniel+riolo&qid=1600025837&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61E95AkO4lL.jpg" alt="Cher Football Français"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Cher-football-fran%C3%A7ais-Daniel-Riolo/dp/2755683805/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=daniel+riolo&qid=1600025837&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61E95AkO4lL.jpg" alt="Cher Football Français" class="books" /></a>
       <figcaption>
         Daniel Riolo
       </figcaption>
@@ -190,23 +190,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 12
+    <!--Livre 12-->
     <figure>
-      <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-game-Thrones/dp/2756408522/ref=pd_sim_14_7?_encoding=UTF8&pd_rd_i=2756408522&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lZsWrGaQL.jpg" alt="L'intégrale du Trône de Fer - Partie 2" class="books" /></a>
+      <a href="https://www.amazon.fr/Both-Sides-International-Nicklas-Bendtner/dp/1913183629/ref=sr_1_10?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=bendtner&qid=1602328687&sr=8-10" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61xsNKtLpCL.jpg" alt="bendtner" class="books" /></a>
       <figcaption>
-        George R.R. Martin
+        Nicklas Bendtner
       </figcaption>
       <figcaption>
-        Le Trône de Fer
+        Both Sides
       </figcaption>
       <figcaption>
-        L'intégrale - Partie 2
+        15,05€
       </figcaption>
-      <figcaption>
-        22,90€
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -863,8 +860,8 @@
   <div class="booksLine">
     <!--Livre 53-->
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-du-commissaire-Broussard-Robert/dp/2847366695/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=robert+broussard&qid=1595521187&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81e13WwsTnL.jpg"
-          alt="Mémoires Broussard" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-du-commissaire-Broussard-Robert/dp/2847366695/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=robert+broussard&qid=1595521187&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81e13WwsTnL.jpg" alt="Mémoires Broussard" class="books" /></a>
       <figcaption>
         Robert Broussard
       </figcaption>
