--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="*" target="_blank"> <img src="https://vignette.wikia.nocookie.net/crashban/images/f/fb/It%27s_about_time.png/revision/latest?cb=20200622174313" alt="Crash" class="game" /></a>
       <figcaption>
@@ -31,7 +31,7 @@
       <figcaption>
         69,99 en précommande
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
