--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,16 +33,19 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/9bdac691416203.5e31550e9a287.jpg" alt="NBA 2K21" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://s1.gaming-cdn.com/images/products/7383/271x377/football-manager-2021-cover.jpg" alt="NBA 2K21" class="game" /></a>
       <figcaption>
-        NBA 2K21 - Edition Légende
+        Fotball Manager 2021
       </figcaption>
       <figcaption>
-        ???€ sur PlayStation (surement 100 euros)
+        Prix à définir sur amazon ou à
       </figcaption>
-    </figure>-->
+      <figcaption>
+        commander moi même sur instang gaming
+      </figcaption>
+    </figure>
 
     <!--Jeu 3
     <figure>
