--- a/livres.html
+++ b/livres.html
@@ -1134,35 +1134,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 71
+    <!--Livre 71-->
     <figure>
-      <a href="https://www.amazon.fr/Kobe-Bryant-Mamba-mentality-fa%C3%A7on/dp/2755643323/ref=pd_sim_14_5/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2755643323&pd_rd_r=2a2bdb30-9e35-4577-bdb7-3daf8e3f9be7&pd_rd_w=WigFl&pd_rd_wg=gaL77&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=FB6174GVNX2M5NH18EYM&psc=1&refRID=FB6174GVNX2M5NH18EYM"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41OGHVjhhLL.jpg" alt="Kobe 1" class="books" /></a>
+      <a href="https://www.amazon.fr/Une-terre-promise-Barack-Obama/dp/2213706123/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=obama&qid=1605217436&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91UkKsuMIOL.jpg" alt="Obama" class="books" /></a>
       <figcaption>
-        Kobe Bryant
+        Barack Obama
       </figcaption>
       <figcaption>
-        Mamba mentality, ma façon de jouer
+        Une terre promise
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        32,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 72
+    <!--Livre 72-->
     <figure>
-      <a href="https://www.amazon.fr/Kobe-Bryant-Showboat-Roland-Lazenby/dp/2378150105/ref=pd_bxgy_img_2/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2378150105&pd_rd_r=353cd523-760f-49ab-8ba2-310fb010b2e8&pd_rd_w=kQjrf&pd_rd_wg=bgEQa&pf_rd_p=da1675de-3974-4ba2-b26f-c06b987f79cb&pf_rd_r=FDPPK1RPS0DBF89E02KH&psc=1&refRID=FDPPK1RPS0DBF89E02KH"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ulDCPahAL.jpg" alt="Kobe 2" class="books" /></a>
+      <a href="https://www.amazon.fr/Bonjour-vient-laffaire-Alain-Hamon/dp/2373011387/ref=sr_1_fkmr0_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2MR8OMAQ6OPSU&dchild=1&keywords=bonjour+on+vient+pour+l+affaire&qid=1605406055&quartzVehicle=77-947&replacementKeywords=bonjour+on+vient+pour+affaire&sprefix=bonjour+on%2Caps%2C176&sr=8-1-fkmr0"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41vDFaAP9jL.jpg" alt="Alain Hamon Mémoires" class="books" /></a>
       <figcaption>
-        Roland Lazenby
+        Alain Hamon
       </figcaption>
       <figcaption>
-        Kobe Bryant - Showboat
+        Bonjour, on vient pour l'affaire
       </figcaption>
       <figcaption>
-        24,00€
+        19,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -1181,20 +1181,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 74
+    <!--Livre 74-->
     <figure>
-      <a href="https://www.amazon.fr/Encore-instant-Claude-Sarraute/dp/2081390671/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1585677833&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61WT4n63tUL.jpg"
-          alt="Encore un instant" class="books" /></a>
+      <a href="amazon.fr/Loup-Wall-Street-Jordan-Belfort/dp/2253129046/ref=pd_sim_nf_14_2/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2253129046&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8131enAF2nL.jpg"
+          alt="Le Loup de Wall Street" class="books" /></a>
       <figcaption>
-        Claude Sarraute
+        Jordan Belfort
       </figcaption>
       <figcaption>
-        Encore un instant
+        Le Loup de Wall Street
       </figcaption>
       <figcaption>
-        19,00€
+        9,20€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 75-->
     <figure>
@@ -1367,48 +1367,172 @@
       </figcaption>
     </figure>
 
-    <!--Livre 82
+    <!--Livre 82-->
     <figure>
-      <a href="https://www.amazon.fr/temps-tempetes-I-Collectif/dp/B08BWFVX53/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595467809&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71GByhfLfgL.jpg"
-          alt="Sarkozy - Tempêtes" class="books" /></a>
+      <a href="https://www.amazon.fr/Jordan-Belfort-loup-Wall-Street/dp/2378150946/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81ClhjnocnL.jpg"
+          alt="Vendre: Les secrets de ma méthode" class="books" /></a>
       <figcaption>
-        Nicolas Sarkozy
+        Jordan Belfort
       </figcaption>
       <figcaption>
-        Le Temps des Tempêtes - Tome 1
+        Vendre: Les secrets de ma méthode
+      </figcaption>
+      <figcaption>
+        17,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 83-->
+    <figure>
+      <a href="https://www.amazon.fr/Cassez-baraque-Capitalisez-sur-passions/dp/2744067083/ref=pd_sim_nf_14_5/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2744067083&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Tq4TVUGrL.jpg"
+          alt="Cassez la baraque !" class="books" /></a>
+      <figcaption>
+        Gary Vaynerchuk
+      </figcaption>
+      <figcaption>
+        Cassez la baraque ! Capitalisez sur vos passions
+      </figcaption>
+      <figcaption>
+        22,50€
+      </figcaption>
+    </figure>
+
+    <!--Livre 84-->
+    <figure>
+      <a href="https://www.amazon.fr/L%C3%A9quilibre-est-courage-Pierre-Villiers/dp/2213717842/ref=sr_1_16?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-16" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/7123ejxMOoL.jpg"
+          alt="L'équilibre est un courage" class="books" /></a>
+      <figcaption>
+        Pierre de Villiers
+      </figcaption>
+      <figcaption>
+        L'équilibre est un courage
+      </figcaption>
+      <figcaption>
+        22,50€
+      </figcaption>
+    </figure>
+  </div>
+
+  <div class="booksLine">
+    <!--Livre 85-->
+    <figure>
+      <a href="https://www.amazon.fr/Friends-cuisine-officiel-Amanda-Yee/dp/B08FKLN24H/ref=sr_1_32?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406857&refinements=p_72%3A184904031&s=books&sr=1-32" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71iD6X5q-hL.jpg" alt="Recettes Friends"
+          class="books" /></a>
+      <figcaption>
+        Friends
+      </figcaption>
+      <figcaption>
+        Le livre de cuisine officiel
+      </figcaption>
+      <figcaption>
+        29,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 86-->
+    <figure>
+      <a href="https://www.amazon.fr/Nature-humaine-Prix-Femina-2020/dp/2081433486/ref=sr_1_74?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407011&refinements=p_72%3A184904031&s=books&sr=1-74" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61k3y90ergL.jpg"
+          alt="Nature humaine" class="books" /></a>
+      <figcaption>
+        Serge Joncour
+      </figcaption>
+      <figcaption>
+        Nature humaine
+      </figcaption>
+      <figcaption>
+        21,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 87-->
+    <figure>
+      <a href="https://www.amazon.fr/L%C3%89nigme-Chambre-622-Jo%C3%ABl-Dicker/dp/B0833XMR6L/ref=sr_1_93?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407029&refinements=p_72%3A184904031&s=books&sr=1-93" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg"
+          alt="L'Énigme de la Chambre 622" class="books" /></a>
+      <figcaption>
+        Joël Dicker
+      </figcaption>
+      <figcaption>
+        L'Énigme de la Chambre 622
+      </figcaption>
+      <figcaption>
+        23,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 88-->
+    <figure>
+      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/207289509X/ref=sr_1_27?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-27" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71+cmO5-RgL.jpg"
+          alt="L’anomalie" class="books" /></a>
+      <figcaption>
+        Hervé Le Tellier
+      </figcaption>
+      <figcaption>
+        L’anomalie
+      </figcaption>
+      <figcaption>
+        20,00€
+      </figcaption>
+    </figure>
+  </div>
+
+  <div class="booksLine">
+    <!--Livre 89-->
+    <figure>
+      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs"
+          class="books" /></a>
+      <figcaption>
+        José Raul Capablanca
+      </figcaption>
+      <figcaption>
+        Les principes fondamentaux des échecs
+      </figcaption>
+      <figcaption>
+        15,<00></00>€
+      </figcaption>
+    </figure>
+
+    <!--Livre 90-->
+    <figure>
+      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg"
+          alt="Ma carrière échiquéenne" class="books" /></a>
+      <figcaption>
+        José-Raúl Capablanca
+      </figcaption>
+      <figcaption>
+        Ma carrière échiquéenne
+      </figcaption>
+      <figcaption>
+        18,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 91
+    <figure>
+      <a href="https://www.amazon.fr/L%C3%89nigme-Chambre-622-Jo%C3%ABl-Dicker/dp/B0833XMR6L/ref=sr_1_93?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407029&refinements=p_72%3A184904031&s=books&sr=1-93" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg"
+          alt="L'Énigme de la Chambre 622" class="books" /></a>
+      <figcaption>
+        Joël Dicker
+      </figcaption>
+      <figcaption>
+        L'Énigme de la Chambre 622
       </figcaption>
       <figcaption>
         23,00€
       </figcaption>
     </figure>-->
 
-    <!--Livre 83
+    <!--Livre 92
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-du-commissaire-Broussard-Robert/dp/2847366695/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=robert+broussard&qid=1595521187&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81e13WwsTnL.jpg"
-          alt="Mémoires Broussard" class="books" /></a>
+      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/207289509X/ref=sr_1_27?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-27" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71+cmO5-RgL.jpg"
+          alt="L’anomalie" class="books" /></a>
       <figcaption>
-        Robert Broussard
+        Hervé Le Tellier
       </figcaption>
       <figcaption>
-        Mémoires du commissaire Broussard
+        L’anomalie
       </figcaption>
       <figcaption>
-        12,50€
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 84
-    <figure>
-      <a href="https://www.amazon.fr/reveille-pas-juge-qui-dort/dp/2213613389/ref=rtpb_1/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2213613389&pd_rd_r=d6ee78b4-4b8c-4b8b-9c26-f3d2e246726f&pd_rd_w=yVHKy&pd_rd_wg=adqlh&pf_rd_p=11fd17e3-2e76-468d-ad1e-fcdf79abf9f0&pf_rd_r=WNFEY9JZD6FWWTG0GSWS&psc=1&refRID=WNFEY9JZD6FWWTG0GSWS" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51VWSZ065EL.jpg"
-          alt="On ne reveille pas un juge qui dort" class="books" /></a>
-      <figcaption>
-        Gilbert Thiel
-      </figcaption>
-      <figcaption>
-        On ne reveille pas un juge qui dort
-      </figcaption>
-      <figcaption>
-        25,00€
+        20,00€
       </figcaption>
     </figure>-->
   </div>
