grosse maj prix

--- a/livres.html
+++ b/livres.html
@@ -201,7 +201,7 @@
         Both Sides
       </figcaption>
       <figcaption>
-        15,05€
+        15,26€
       </figcaption>
     </figure>
   </div>
@@ -272,7 +272,7 @@
         La Fêlure
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        7,50€
       </figcaption>
     </figure>
   </div>
@@ -289,7 +289,7 @@
         Tendre est la nuit
       </figcaption>
       <figcaption>
-        En stock le 18 juillet 2020
+        7,20€
       </figcaption>
     </figure>
 
@@ -385,7 +385,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 24-->
+    <!--Livre 24
     <figure>
       <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
@@ -398,7 +398,7 @@
       <figcaption>
         Rupture de stock sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -546,7 +546,7 @@
         La gloire de l'Empire
       </figcaption>
       <figcaption>
-        19,56€
+        8,29€
       </figcaption>
     </figure>
 
@@ -679,7 +679,7 @@
         Diam's, autobiographie
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        7,40€
       </figcaption>
     </figure>
 
@@ -743,9 +743,6 @@
       <figcaption>
         18,00€
       </figcaption>
-      <figcaption>
-        Expédié sous 1 à 3 semaines
-      </figcaption>
     </figure>
 
 
@@ -775,7 +772,7 @@
         Révolte ! Les rebelles du sport
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        29,95€
       </figcaption>
     </figure>
 
@@ -791,7 +788,7 @@
         Libérez votre cerveau !
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        20,00€
       </figcaption>
     </figure>
   </div>
@@ -808,7 +805,7 @@
         Au-delà de tous mes rêves
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        19,90€
       </figcaption>
     </figure>
 
@@ -823,7 +820,7 @@
         De l'urgent, du presque rien et du rien du tout
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        18,50€
       </figcaption>
     </figure>
 
@@ -837,7 +834,7 @@
         Je chemine avec Hubert Reeves
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        12,00€
       </figcaption>
     </figure>
 
@@ -852,7 +849,7 @@
         Déjeuner en paix
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        17,00€
       </figcaption>
     </figure>
   </div>
@@ -913,7 +910,7 @@
         I'll Show You
       </figcaption>
       <figcaption>
-        26,12€
+        23,84€
       </figcaption>
     </figure>
   </div>
@@ -1007,7 +1004,7 @@
         Tête haute
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        18,00€
       </figcaption>
     </figure>
 
@@ -1069,7 +1066,7 @@
         Ma Mauvaise réputation
       </figcaption>
       <figcaption>
-        Rupture de stock sur Amazon
+        18,00€
       </figcaption>
     </figure>
 
@@ -1130,14 +1127,14 @@
         Bad As I Wanna Be
       </figcaption>
       <figcaption>
-        8,48€
+        7,99€
       </figcaption>
     </figure>
 
     <!--Livre 71-->
     <figure>
-      <a href="https://www.amazon.fr/Une-terre-promise-Barack-Obama/dp/2213706123/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=obama&qid=1605217436&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91UkKsuMIOL.jpg" alt="Obama" class="books" /></a>
+      <a href="https://www.amazon.fr/Une-terre-promise-Barack-Obama/dp/2213706123/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=obama&qid=1605217436&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91UkKsuMIOL.jpg" alt="Obama" class="books" /></a>
       <figcaption>
         Barack Obama
       </figcaption>
@@ -1177,14 +1174,14 @@
         Les absents, levez le doigt !
       </figcaption>
       <figcaption>
-        15,90€ - En stock le 23 juillet 2020.
+        15,90€
       </figcaption>
     </figure>
 
     <!--Livre 74-->
     <figure>
-      <a href="amazon.fr/Loup-Wall-Street-Jordan-Belfort/dp/2253129046/ref=pd_sim_nf_14_2/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2253129046&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8131enAF2nL.jpg"
-          alt="Le Loup de Wall Street" class="books" /></a>
+      <a href="https://www.amazon.fr/Loup-Wall-Street-Jordan-Belfort/dp/2253129046/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3FH5K71NLJUF8&dchild=1&keywords=le+loup+de+wall+street&qid=1606081484&sprefix=le+loup+de+wa%2Caps%2C189&sr=8-4"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8131enAF2nL.jpg" alt="Le Loup de Wall Street" class="books" /></a>
       <figcaption>
         Jordan Belfort
       </figcaption>
@@ -1207,7 +1204,7 @@
         L'Exécution
       </figcaption>
       <figcaption>
-        19,00€ - expédié sous 2 à 3 semaines.
+        19,00€
       </figcaption>
     </figure>
 
@@ -1254,7 +1251,7 @@
         How a Person Became a User
       </figcaption>
       <figcaption>
-        23,11€
+        23,42€
       </figcaption>
     </figure>
 
@@ -1269,7 +1266,7 @@
         Abolish Silicon Valley
       </figcaption>
       <figcaption>
-        12,91€
+        14,45€
       </figcaption>
     </figure>
 
@@ -1284,7 +1281,7 @@
         Give People Money
       </figcaption>
       <figcaption>
-        13,98€
+        15,13€
       </figcaption>
     </figure>
   </div>
@@ -1316,7 +1313,7 @@
         White
       </figcaption>
       <figcaption>
-        8,92€
+        21,50€
       </figcaption>
     </figure>
 
@@ -1384,8 +1381,8 @@
 
     <!--Livre 83-->
     <figure>
-      <a href="https://www.amazon.fr/Cassez-baraque-Capitalisez-sur-passions/dp/2744067083/ref=pd_sim_nf_14_5/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2744067083&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Tq4TVUGrL.jpg"
-          alt="Cassez la baraque !" class="books" /></a>
+      <a href="https://www.amazon.fr/Cassez-baraque-Capitalisez-sur-passions/dp/2744067083/ref=pd_sim_nf_14_5/257-9479405-0879257?_encoding=UTF8&pd_rd_i=2744067083&pd_rd_r=74e18d95-1a65-4c61-890b-33b91d25f908&pd_rd_w=kYCPu&pd_rd_wg=7lqKc&pf_rd_p=989549ee-b4b9-468d-9113-731b03560554&pf_rd_r=R9FY5G6G9SM9S5Y5XKM6&psc=1&refRID=R9FY5G6G9SM9S5Y5XKM6"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Tq4TVUGrL.jpg" alt="Cassez la baraque !" class="books" /></a>
       <figcaption>
         Gary Vaynerchuk
       </figcaption>
@@ -1399,8 +1396,8 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/L%C3%A9quilibre-est-courage-Pierre-Villiers/dp/2213717842/ref=sr_1_16?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-16" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/7123ejxMOoL.jpg"
-          alt="L'équilibre est un courage" class="books" /></a>
+      <a href="https://www.amazon.fr/L%C3%A9quilibre-est-courage-Pierre-Villiers/dp/2213717842/ref=sr_1_16?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-16"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/7123ejxMOoL.jpg" alt="L'équilibre est un courage" class="books" /></a>
       <figcaption>
         Pierre de Villiers
       </figcaption>
@@ -1416,8 +1413,8 @@
   <div class="booksLine">
     <!--Livre 85-->
     <figure>
-      <a href="https://www.amazon.fr/Friends-cuisine-officiel-Amanda-Yee/dp/B08FKLN24H/ref=sr_1_32?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406857&refinements=p_72%3A184904031&s=books&sr=1-32" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71iD6X5q-hL.jpg" alt="Recettes Friends"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Friends-cuisine-officiel-Amanda-Yee/dp/B08FKLN24H/ref=sr_1_32?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406857&refinements=p_72%3A184904031&s=books&sr=1-32"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71iD6X5q-hL.jpg" alt="Recettes Friends" class="books" /></a>
       <figcaption>
         Friends
       </figcaption>
@@ -1431,8 +1428,8 @@
 
     <!--Livre 86-->
     <figure>
-      <a href="https://www.amazon.fr/Nature-humaine-Prix-Femina-2020/dp/2081433486/ref=sr_1_74?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407011&refinements=p_72%3A184904031&s=books&sr=1-74" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61k3y90ergL.jpg"
-          alt="Nature humaine" class="books" /></a>
+      <a href="https://www.amazon.fr/Nature-humaine-Prix-Femina-2020/dp/2081433486/ref=sr_1_74?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407011&refinements=p_72%3A184904031&s=books&sr=1-74"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61k3y90ergL.jpg" alt="Nature humaine" class="books" /></a>
       <figcaption>
         Serge Joncour
       </figcaption>
@@ -1446,8 +1443,8 @@
 
     <!--Livre 87-->
     <figure>
-      <a href="https://www.amazon.fr/L%C3%89nigme-Chambre-622-Jo%C3%ABl-Dicker/dp/B0833XMR6L/ref=sr_1_93?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407029&refinements=p_72%3A184904031&s=books&sr=1-93" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg"
-          alt="L'Énigme de la Chambre 622" class="books" /></a>
+      <a href="https://www.amazon.fr/L%C3%89nigme-Chambre-622-Jo%C3%ABl-Dicker/dp/B0833XMR6L/ref=sr_1_93?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605407029&refinements=p_72%3A184904031&s=books&sr=1-93"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg" alt="L'Énigme de la Chambre 622" class="books" /></a>
       <figcaption>
         Joël Dicker
       </figcaption>
@@ -1461,8 +1458,8 @@
 
     <!--Livre 88-->
     <figure>
-      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/207289509X/ref=sr_1_27?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-27" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71+cmO5-RgL.jpg"
-          alt="L’anomalie" class="books" /></a>
+      <a href="https://www.amazon.fr/Lanomalie-Herv%C3%A9-Tellier/dp/207289509X/ref=sr_1_27?dchild=1&pf_rd_i=301061&pf_rd_p=2ae9d274-f85d-5302-a065-2b44b53e1f4d&pf_rd_r=BSAZRBNJCDJ4GGVZ9Q23&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&qid=1605406820&refinements=p_72%3A184904031&s=books&sr=1-27"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71+cmO5-RgL.jpg" alt="L’anomalie" class="books" /></a>
       <figcaption>
         Hervé Le Tellier
       </figcaption>
@@ -1478,8 +1475,8 @@
   <div class="booksLine">
     <!--Livre 89-->
     <figure>
-      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/principes-fondamentaux-%C3%A9checs-Jos%C3%A9-Capablanca/dp/2916340831/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Les+principes+fondamentaux+aux+%C3%A9checs&qid=1605408386&s=books&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61wiKslr7hL.jpg" alt="Les principes fondamentaux des échecs" class="books" /></a>
       <figcaption>
         José Raul Capablanca
       </figcaption>
@@ -1487,14 +1484,14 @@
         Les principes fondamentaux des échecs
       </figcaption>
       <figcaption>
-        15,<00></00>€
+        15,00€
       </figcaption>
     </figure>
 
     <!--Livre 90-->
     <figure>
-      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg"
-          alt="Ma carrière échiquéenne" class="books" /></a>
+      <a href="https://www.amazon.fr/carri%C3%A8re-%C3%A9chiqu%C3%A9enne-Jose-Raul-Capablanca/dp/232209661X/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2WIUY9RCKH7BO&dchild=1&keywords=jose+raul+capablanca&qid=1605408503&sprefix=jose+rau%2Cstripbooks%2C175&sr=8-9"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Btuo81U3L.jpg" alt="Ma carrière échiquéenne" class="books" /></a>
       <figcaption>
         José-Raúl Capablanca
       </figcaption>
@@ -1508,8 +1505,8 @@
 
     <!--Livre 91-->
     <figure>
-      <a href="https://www.amazon.fr/Churchill-Andrew-ROBERTS/dp/2262081190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=churchill&qid=1605651658&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg"
-          alt="Churchill" class="books" /></a>
+      <a href="https://www.amazon.fr/Churchill-Andrew-ROBERTS/dp/2262081190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=churchill&qid=1605651658&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61XvcwjjMdL.jpg" alt="Churchill" class="books" /></a>
       <figcaption>
         Andrew Roberts
       </figcaption>
