--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 15 novembre 2020
+    Mise à jour liste le 22 novembre 2020
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 01 juillet 2020
+    Mise à jour prix le 22 novembre 2020
   </p>
 
 </body>
